test/code/test_class_function_final.out

Fatal error: Cannot override final method A::name() in {{CWD}}/test/code/test_class_function_final.php on line 8
